# eVaiutilities

./: Cargo.toml  README.md  _config.yml
.github/workflows/: draft-pdf.yml
paper/: paper.bib  paper.md
src/: acmgtranscript.rs  altallele.rs  altalleleolder.rs  annotation.rs  annotationolder.rs  args.rs  coordinate.rs  coordinateolder.rs  coordinatevariant.rs  coordinatevariantolder.rs  fastanalyzer.rs  genomeanalyzer.rs  genomedownload.rs  gtfanalyzer.rs  main.rs  pathogenicity.rs  pathogenicityolder.rs  populationvariant.rs  populationvariantolder.rs  refallele.rs  refalleleolder.rs  sequenceprofile.rs  transcript.rs  transcriptolder.rs  variantaccumulate.rs  variantdatabase.rs  variantfilter.rs
testfiles/newversion-population/: CLL_2028_56.ACMG.tsv  CLL_2029_216.ACMG.tsv  CLL_2030_429.ACMG.tsv  CLL_2031_592.ACMG.tsv  CLL_2032_611.ACMG.tsv  CLL_2033_627.ACMG.tsv  CLL_2034_628.ACMG.tsv  CLL_2035_808.ACMG.tsv  CLL_2038_931.ACMG.tsv  CLL_2039_958.ACMG.tsv  CLL_2041_1128.ACMG.tsv  CLL_2042_1250.ACMG.tsv  CLL_2043_1222.ACMG.tsv  CLL_2045_1478.ACMG.tsv  CLL_2046_1507.ACMG.tsv  CLL_2047_1547.ACMG.tsv  CLL_2048_1674.ACMG.tsv  CLL_2049_1675.ACMG.tsv  CLL_2050_1682.ACMG.tsv  CLL_2051_1723.ACMG.tsv  CLL_2052_1803.ACMG.tsv  CLL_2054_1817.ACMG.tsv  CLL_2055_1883.ACMG.tsv  CLL_2057_1990.ACMG.tsv  CLL_2058_2010.ACMG.tsv  CLL_2063_2217.ACMG.tsv  CLL_2064_2335.ACMG.tsv  CLL_2065_2423.ACMG.tsv  CLL_2066_2439.ACMG.tsv  CLL_2067_2446.ACMG.tsv  CLL_2068_2464.ACMG.tsv  CLL_2069_2471.ACMG.tsv  CLL_2070_2477.ACMG.tsv  CLL_2072_2492.ACMG.tsv  CLL_2073_2515.ACMG.tsv  CLL_2074_2569.ACMG.tsv  (+19 more)
(+4 files in other folders)
